@@ -1,3 +1,11 @@
+2011-10-18  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
+	* ConsoleHelper.cs:
+	  Don't uselessly print success messages.
+
 2011-09-29  WOnder93  <omosnacek@gmail.com>
 
 	* ConsoleHelper.cs:
